@@ -215,7 +215,7 @@ PhoneBookI::createContact(const Ice::Current&)
 	}
 	
 	identities.push_back(ident);
-	_nameIdentitiesDict.insert(NameIdentitiesDict::value_type(string("N"), identities));
+	_nameIdentitiesDict.put(NameIdentitiesDict::value_type(string("N"), identities));
 	
 	//
 	// Turn the identity into a Proxy and return the Proxy to the
@@ -318,7 +318,7 @@ PhoneBookI::move(const Identity& ident, const string& oldName, const string& new
 	    identities = p->second;
 	}
 	identities.push_back(ident);
-	_nameIdentitiesDict.insert(NameIdentitiesDict::value_type("N" + newName, identities));
+	_nameIdentitiesDict.put(NameIdentitiesDict::value_type("N" + newName, identities));
     }
     catch(const Freeze::DBNotFoundException&)
     {
@@ -386,7 +386,7 @@ PhoneBookI::getNewIdentity()
 	ids.clear();
 	ids.push_back(id);
 
-	_nameIdentitiesDict.insert(NameIdentitiesDict::value_type(string("ID"), ids));
+	_nameIdentitiesDict.put(NameIdentitiesDict::value_type(string("ID"), ids));
 
 	id.name = s;
 	id.category = "contact";
@@ -435,6 +435,6 @@ PhoneBookI::removeI(const Identity& ident, const string& name)
 	// See the comment in getNewIdentity why the prefix "N" is
 	// needed.
 	//
-	_nameIdentitiesDict.insert(NameIdentitiesDict::value_type("N" + name, identities));
+	_nameIdentitiesDict.put(NameIdentitiesDict::value_type("N" + name, identities));
     }
 }
