@@ -1,6 +1,13 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Changed the behavior of Freeze::Map::insert to match the insert behavior 
+  on associative containers in the C++ standard: if the element is already
+  there, it is not updated.
+  Added Freeze::Map::put function, to insert or replace an element, like
+  the old insert. This corresponds to the behavior of Berkeley DB's 
+  DB->put().
+
 - Added saveObject() operation on Evictor, and savedObject() operation
   on PersistenceStrategy.
   saveObject() saves a persistent object immediately. Once an operation 
